# GEM

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
gem/: inference.py  train.py
gem/common/: __init__.py  prompt_augmentation.py  sampling.py  stratified.py
gem/common/templates/: templates_basic.py  templates_diverse.py
gem/configs/: __init__.py  adaptation_config.py  base_config.py  inference_config.py  operator_config.py  pipeline_config.py
gem/datasets/: __init__.py  captioned_image_dataset.py  prompt_dataset.py  sampled_joint_dataset.py  unlabeled_image_dataset.py
gem/datasets/prompt_datasets/: adhoc_prompt_dataset.py  adhoc_prompt_embed_dataset.py  coco_30k_dataset.py  csv_prompt_dataset.py  file_prompt_dataset.py  mjhq_30k_dataset.py  mma_nudity_prompt_dataset.py  p4d_prompt_dataset.py  rab_nudity_prompt_dataset.py
gem/evaluation/: base_evaluator.py  clip_evaluator.py  clip_to_text_evaluator.py  fid_evaluator.py  gemini_evaluator.py  image_quality_evaluator.py  imagenette_evaluator.py  nudity_evaluator.py  q16_evaluator.py  vlm_evaluator.py
gem/operators/: __init__.py  identity_operator.py  model_adaptation_mixin.py  operator.py  registry.py  syl_id.py  utils.py
gem/utils/: chain_id.py  cli.py  debug.py  image_utils.py  logging.py  make_eval_table.py  make_image_grid.py  memory.py  seed.py  slugify.py
gem/wrappers/: __init__.py  base_pipeline_wrapper.py  custom_adapter_utils.py  factory.py  parameter_subset_selector.py  pipeline_wrapper_flux.py  pipeline_wrapper_qwenimage.py  pipeline_wrapper_sd.py  pipeline_wrapper_sd3.py
(+5 files in other folders)
