[project]
name = "gem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.47.0",
    "clean-fid",
    "datasets>=4.0.0",
    "diffusers>=0.36.0",
    "einops>=0.8.2",
    "google-genai>=1.54.0",
    "google-generativeai>=0.8.5",
    "lpips>=0.1.4",
    "matplotlib>=3.10.7",
    "nudenet>=3.4.2",
    "opencv-python-headless>=4.12.0.88",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "python-dotenv>=1.1.1",
    "qwen-vl-utils>=0.0.14",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "timm>=1.0.25",
    "torch>=2.8.0",
    "torchaudio==2.9.1",
    "torchvision>=0.23.0",
    "transformers>=4.56.1",
    "wandb>=0.21.4",
]

[tool.uv.sources]
clean-fid = { git = "https://github.com/GaParmar/clean-fid.git" }